--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS}
 
 # Google AI API Key
 google.ai.api.key=${GOOGLE_AI_API_KEY}
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.medical.dosage=DEBUG
+
+logging.level.org.hibernate.SQL=DEBUG
